<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.login.LoginFragment">

    <data>

        <variable
            name="authViewModel"
            type="com.hanmajid.android.seed.ui.AuthViewModel" />

        <variable
            name="viewModel"
            type="com.hanmajid.android.seed.ui.auth.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_horizontal_margin"
            android:layout_marginEnd="@dimen/page_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_login"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/page_vertical_margin"
                android:text="@string/title_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/username"
                app:error="@{!viewModel.loginForm.errorUsername.isEmpty() &amp;&amp; viewModel.loginForm.usernameTouched ? viewModel.loginForm.errorUsername : null}"
                app:errorEnabled="@{!viewModel.loginForm.errorUsername.isEmpty() &amp;&amp; viewModel.loginForm.usernameTouched}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    touched="@{viewModel.loginForm.usernameTouched}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={viewModel.loginForm.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:error="@{!viewModel.loginForm.errorPassword.isEmpty() &amp;&amp; viewModel.loginForm.passwordTouched ? viewModel.loginForm.errorPassword : null}"
                app:errorEnabled="@{!viewModel.loginForm.errorPassword.isEmpty() &amp;&amp; viewModel.loginForm.passwordTouched}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    touched="@{viewModel.loginForm.passwordTouched}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.loginForm.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:enabled="@{!authViewModel.isLoadingLogin}"
                android:onClick="@{() -> viewModel.doLogin()}"
                android:text="@string/title_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/login_not_have_account" />

            <Button
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/page_vertical_margin"
                android:text="@string/title_register" />

        </LinearLayout>
    </ScrollView>
</layout>